--- a/docs/login.css
+++ b/docs/login.css
@@ -1,9 +1,22 @@
 .card-login {
-    width: 300px;
+    width: 700px;
     background: color(white);
     border: 1px solid white;
     padding: 25px;
     box-shadow: 0 2px 6px rgba(0,0,0,1);
+    margin: auto;
+}
+
+/*Cabeçalho*/
+.header {
+    width: 100%;
+    display: flex;
+    margin-bottom: 30px;
+}
+
+.header img {
+    width: 100%;
+    height: auto;
     margin: auto;
 }
 
