--- a/docs/login.css
+++ b/docs/login.css
@@ -20,6 +20,21 @@
     margin: auto;
 }
 
+.campo-usuario {
+    position: relative;
+    width: 100%;
+    max-width: 300px;
+    margin: 10px auto;
+}
+
+.campo-usuario input {
+    width: 100%;
+    padding: 10px 40px; /* espaço pro cadeado e olho */
+    border: 1px solid #999;
+    border-radius: 4px;
+    font-size: 14px;
+    box-sizing: border-box;
+
 .campo-senha {
     position: relative;
     width: 100%;
