--- a/docs/inicio.css
+++ b/docs/inicio.css
@@ -191,7 +191,28 @@
 }
 
 /* ================= AJUSTE GLOBAL ================= */
+@font-face {
+  font-family: 'Cactus';
+  src: url(Cactus\ Regular.otf), format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 body {
   padding-top: 65px;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Cactus', sans-serif;
+}
+
+/* ================= MAIN ==================== */
+
+.header-texto h1 {
+  margin: 10px;
+  font-size: 35px;
+}
+
+.header-texto p {
+  margin: 5px 0 0;
+  font-size: 40px;
+  color:#a30d0a;
+  margin-bottom: 20px;
 }
