--- a/docs/inicio.css
+++ b/docs/inicio.css
@@ -207,12 +207,14 @@ body {
 
 .header-texto h1 {
   margin: 10px;
-  font-size: 35px;
+  font-size: 50px;
+  border-top: 20px;
+  padding: 20px;
+  color:#a30d0a;
 }
 
 .header-texto p {
-  margin: 5px 0 0;
+  margin: 50px 0 0;
   font-size: 40px;
-  color:#a30d0a;
   margin-bottom: 20px;
 }
