--- a/docs/inicio.css
+++ b/docs/inicio.css
@@ -209,12 +209,18 @@ body {
   margin: 10px;
   font-size: 50px;
   border-top: 20px;
-  padding: 20px;
+  padding: 10px;
   color:#a30d0a;
 }
 
 .header-texto p {
   margin: 5px 0 0;
-  font-size: 40px;
+  font-size: 35px;
   margin-bottom: 20px;
+}
+
+.center-text {
+  margin: 20px 0 5px;
+  font-size: 35px;
+  margin-bottom: 18px;
 }
