--- a/docs/login.css
+++ b/docs/login.css
@@ -3,7 +3,15 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+@font-face {
+    font-family: 'Cactus';
+    src: url(Cactus\ Regular.otf) format('opentype');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
+    font-family: 'Cactus', sans-serif;
     background: #f2f2f2;
     margin: 0;
     padding: 40px 0;
