--- a/docs/superpop.css
+++ b/docs/superpop.css
@@ -191,7 +191,7 @@ textarea {
     width: 250px;
 }
 
-#lista-colaboradores {
+#listaColaboradores {
     position: static;
     top: 100%;
     left: 0;
@@ -208,7 +208,7 @@ textarea {
     z-index: 999;
 }
 
-#lista-colaboradores li {
+#listaColaboradores li {
     padding: 10px 14px;
     cursor: pointer;
     font-size: 14px;
